--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -43,8 +43,9 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<% if admin_signed_in?%>
+  <h3>Cancel my account</h3>
+  <p>Unhappy? <%= button_to "Cancel my account", user_delete_registration_path(resource.id), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<% end %>
 
 <%= link_to "Back", :back %>
