--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,7 @@
 <% if admin_signed_in?%>
   <h2>管理者ログイン中</h2>
   <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+  <%= link_to "管理者情報編集", edit_admin_registration_path %>
   <%= link_to "ユーザー登録", new_user_registration_path %>
   <% current_admin.users.each do |user| %>
     <br><%= link_to user.name , edit_user_id_registration_path(user.id) %>
