--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,3 +1,8 @@
 <%= render "shared/header" %>
 
 <h1>トップページ</h1>
+<% if admin_signed_in? || user_signed_in? %>
+  <% @clients.each do |client| %>
+    <%= client.name %>
+  <% end %>
+<% end %>
