--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,6 +5,7 @@
     <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
     <%= link_to "管理者情報編集", edit_admin_registration_path %>
     <%= link_to "ユーザー登録", new_user_registration_path %>
+    <br><%= link_to "顧客情報登録", new_client_path %>
     <% current_admin.users.each do |user| %>
       <br><%= link_to user.name , edit_user_id_registration_path(user.id) %>
     <% end %>
@@ -12,6 +13,7 @@
     <h2><%= "#{current_user.name}ログイン中" %></h2>
     <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
     <%= link_to "ユーザー編集" , edit_user_id_registration_path(current_user.id) %>
+    <br><%= link_to "顧客情報登録", new_client_path %>
   <% else %>
     <%= link_to "新規登録", new_admin_registration_path %>
     <%= link_to "管理者ログイン", new_admin_session_path %>
