--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>トップページ</h1>
 <% if admin_signed_in? || user_signed_in? %>
-  <% @clients.each do |client| %>
-    <%= client.name %>
+  <% @client.each do |client| %>
+    <%= link_to client.name, edit_client_path(client.id) %>
   <% end %>
 <% end %>
