--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -3,6 +3,6 @@
 <h1>トップページ</h1>
 <% if admin_signed_in? || user_signed_in? %>
   <% @client.each do |client| %>
-    <%= link_to client.name, edit_client_path(client.id) %>
+    <%= link_to client.name, client_path(client.id) %>
   <% end %>
 <% end %>
