--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/header" %>
 
-<h1>トップページ</h1>
+<h1>Top page</h1>
 <% if admin_signed_in? || user_signed_in? %>
   <% @client.each do |client| %>
     <%= link_to client.name, client_path(client.id) %>
