--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -4,5 +4,5 @@
 訪問内容：<%= @visit.content %><br>
 状況：<%= Status.find(@visit.status_id).name %><br>
 
-<%= link_to "訪問情報編集", edit_client_visit_path(@visit.id) %>
+<%= link_to "訪問情報編集", edit_client_visit_path %>
 <br><%=link_to 'もどる', client_path(params[:client_id]) %>
