--- a/app/views/calls/new.html.erb
+++ b/app/views/calls/new.html.erb
@@ -1,3 +1,4 @@
+<h1>問合せ情報作製ページ</h1>
 <%= form_with model: @call, url: client_calls_path, local: true do |f| %>
 <br>
 <%= f.text_field :title, placeholder:"タイトル" %>
