--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -1,3 +1,4 @@
+<h1>訪問情報作製ページ</h1>
 <%= form_with model: @visit, url: client_visits_path, local: true do |f| %>
 <br>
 <%= f.text_field :title, placeholder:"タイトル" %>
