--- a/app/views/calls/new.html.erb
+++ b/app/views/calls/new.html.erb
@@ -1,5 +1,6 @@
 <h1>問合せ情報作製ページ</h1>
 <%= form_with model: @call, url: client_calls_path, local: true do |f| %>
+<%= render 'shared/error_messages', model: f.object %>
 <br>
 <%= f.text_field :title, placeholder:"タイトル" %>
 <br>
@@ -10,5 +11,5 @@
 <%= f.collection_select(:status_id, Status.all, :id, :name, {}) %>
 <br>
 
-<%= f.submit "問合せ情報登録" %><%=link_to 'もどる', :back %>
+<%= f.submit "問合せ情報登録" %><%=link_to 'もどる', client_path(params[:client_id]) %>
 <% end %>
