--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -1,5 +1,6 @@
 <h1>訪問情報作製ページ</h1>
 <%= form_with model: @visit, url: client_visits_path, local: true do |f| %>
+<%= render 'shared/error_messages', model: f.object %>
 <br>
 <%= f.text_field :title, placeholder:"タイトル" %>
 <br>
@@ -10,5 +11,5 @@
 <%= f.collection_select(:status_id, Status.all, :id, :name, {}) %>
 <br>
 
-<%= f.submit "訪問情報登録" %><%=link_to 'もどる', :back %>
+<%= f.submit "訪問情報登録" %><%=link_to 'もどる', client_path(params[:client_id]) %>
 <% end %>
