--- a/app/views/calls/new.html.erb
+++ b/app/views/calls/new.html.erb
@@ -4,7 +4,7 @@
 <br>
 <%= f.text_field :title, placeholder:"タイトル" %>
 <br>
-<%= f.text_field :date, placeholder:"受信日" %>
+<%= f.datetime_select :date, {} %>
 <br>
 <%= f.text_area :content, placeholder:"問合せ内容" %>
 <br>
