--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -4,7 +4,7 @@
 <br>
 <%= f.text_field :title, placeholder:"タイトル" %>
 <br>
-<%= f.text_field :date, placeholder:"訪問日" %>
+<%= f.datetime_select :date, {} %>
 <br>
 <%= f.text_area :content, placeholder:"作業内容" %>
 <br>
