--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -1,6 +1,6 @@
 <h1>訪問情報詳細ページ</h1>
 タイトル：<%= @visit.title %><br>
-訪問日：<%= @visit.date %><br>
+訪問日：<%= @visit.date.strftime("%y年%-m月%-d日%-H:%M") %><br>
 訪問内容：<%= @visit.content %><br>
 状況：<%= Status.find(@visit.status_id).name %><br>
 
