--- a/app/views/shared/_not_login.html.erb
+++ b/app/views/shared/_not_login.html.erb
@@ -2,7 +2,7 @@
 
   <div class="not_login_content">
     <div class="container">
-      FOOTPRINTS
+      <%= image_tag "logo_blue.png", class: "logo" %>
       <div class="btn">
         <%= link_to "ユーザーログイン", new_user_session_path, class: "btn user" %>
         <%= link_to "管理者ログイン", new_admin_session_path, class: "btn admin" %>
