--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -1,34 +1,45 @@
-<h2>Admin Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "admins/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="form_content">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <div class="form_header">
+    <%= image_tag "logo_blue.png", class: "logo" %>
+    <div class="content_text">管理者新規登録</div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+  <%= render 'shared/error_messages', model: f.object %> 
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="form">
+      <div class="label">
+        <%= f.label :name %>
+      </div>
+      <%= f.text_field :name, class: "field" %>
+    </div>
+    
+    <div class="form">
+      <div class="label">
+        <%= f.label :email %>
+      </div>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "field" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="form">
+      <div class="label">
+        <%= f.label :password %><span class="indispensable">英数字含む６文字以上</span>
+      </div>
+      <%= f.password_field :password, autocomplete: "new-password", class: "field" %>
+    </div>
 
-<%= render "admins/shared/links" %>
+    <div class="form">
+      <div class="label">
+        <%= f.label :password_confirmation %><br />
+      </div>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "field" %>
+    </div>
+
+    <div class="button_box">
+      <%= f.submit "登録", class: "submit" %>
+      <%= link_to "キャンセル", root_path, class: "cancel" %>
+    </div>
+  <% end %>
+
+</div>
