管理者用トップページビュー作成

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,7 +1,7 @@
 $cBlue: #0099CC;
 .head {
   height: 50px;
-  width: 100%;
+  width: 100vw;
   background-color: $cBlue;
   display: flex;
   justify-content: center;
