--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,20 +11,18 @@
     </div>
 
     
-    <% if admin_signed_in?%>
-      <h2>管理者ログイン中</h2>
-      <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
-      <%= link_to "管理者情報編集", edit_admin_registration_path %>
-      <%= link_to "ユーザー登録", new_user_registration_path %>
-      <br><%= link_to "顧客情報登録", new_client_path %>
-      <% current_admin.users.each do |user| %>
-        <br><%= link_to user.name , edit_user_id_registration_path(user.id) %>
-      <% end %>
-    <% else %>
-      <h2><%= "#{current_user.name}ログイン中" %></h2>
-      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      <%= link_to "ユーザー編集" , edit_user_id_registration_path(current_user.id) %>
-      <br><%= link_to "顧客情報登録", new_client_path %>
-    <% end %>
+    <%# <% if admin_signed_in?%>
+      <%# <%= link_to "管理者情報編集", edit_admin_registration_path %>
+      <%#<%= link_to "ユーザー登録", new_user_registration_path %>
+      <%#<br><%= link_to "顧客情報登録", new_client_path %>
+      <%#<% current_admin.users.each do |user| %>
+        <%#<br><%= link_to user.name , edit_user_id_registration_path(user.id) %>
+      <%#<% end %>
+    <%#<% else %>
+      <%#<h2><%= "#{current_user.name}ログイン中" </h2>%>
+      <%#<%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+      <%#<%= link_to "ユーザー編集" , edit_user_id_registration_path(current_user.id) %>
+      <%#<br><%= link_to "顧客情報登録", new_client_path %>
+    <%#<% end %>
   </header>
 <% end %>
