--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -1,7 +1,7 @@
 .head {
   height: 50px;
-  width: 100%;
-  background-color: #14a4dd;
+  width: 100vw;
+  background-color: #0099CC;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
