--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -7,11 +7,7 @@ $cOrange: orange;
   justify-content: center;
 }
 
-.new_admin {
-  width: 40%;
-}
-
-.new_user {
+.new_admin,.new_user,.edit_admin,.edit_user {
   width: 40%;
 }
 
@@ -100,6 +96,21 @@ $cOrange: orange;
     height: 30px;
     margin: 10px auto 0;
     border: 5px solid $cOrange;
+    border-radius: 20px;
+    cursor: pointer;
+  }
+
+  & .delete {
+    display: block;
+    background-color: white;
+    color: red;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    width: 30%;
+    height: 30px;
+    margin: 30px auto 0;
+    border: 5px solid red;
     border-radius: 20px;
     cursor: pointer;
   }
