--- a/app/assets/stylesheets/admin/top.scss
+++ b/app/assets/stylesheets/admin/top.scss
@@ -77,22 +77,27 @@ $cBlue: #0099CC;
     text-align: center;
     border-bottom: 2px solid black;
   }
-  & .list {
+  & .list_box {
     width: 40%;
-    height: 35px;
-    border-bottom: 1px dotted gray;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    font-size: 20px;
-    font-weight: 600;
-    & .user_link {
-      display: block;
-      text-decoration: none;
-      background-color: $cBlue;
-      color: white;
-      padding: 1px 20px;
-      border-radius: 20px;
+    height: 280px;
+    overflow: scroll;
+    & .list {
+      height: 35px;
+      border-bottom: 1px dotted gray;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      font-size: 20px;
+      font-weight: 600;
+      & .user_link {
+        display: block;
+        text-decoration: none;
+        background-color: $cBlue;
+        color: white;
+        padding: 1px 20px;
+        border-radius: 20px;
+      }
     }
   }
 }
+
