--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,8 +1,5 @@
 <%= render "shared/header" %>
 <%= render "shared/not_login" %>
+<%= render "shared/top_info" %>
 <%= render "shared/admin_top" %>
-<%# <% if admin_signed_in? || user_signed_in? %>
-  <%# <% @client.each do |client| %>
-    <%# <br><%= link_to client.name, client_path(client.id) %>
-  <%# <% end %>
-<%# <% end %>
+<%= render "shared/user_top" %>
