--- a/app/assets/stylesheets/admin/top.scss
+++ b/app/assets/stylesheets/admin/top.scss
@@ -1,26 +1,26 @@
 $cBlue: #0099CC;
 
-.admin_top {
+.top {
   width: 100vw;
   height: 30vh;
   min-height: 180px;
   border-bottom: 2px dotted black;
-  & .admin_name {
+  & .name {
     font-size: 20px;
     text-align: center;
   }
-  & .admin_info {
+  & .info {
     margin-top: 20px;
     display: flex;
     justify-content: center;
     
-    & .admin_image {
+    & .image {
       width: 120px;
       height: 120px;
       margin-right: 20px;
     }
 
-    & .admin_text {
+    & .text {
       display: flex;
       flex-direction: column;
       align-items: baseline;
@@ -33,10 +33,10 @@ $cBlue: #0099CC;
         font-size: 16px;
         font-weight: 600;
       }
-      & .admin_mail {
+      & .mail {
         font-size: 20px;
       }
-      & .admin_link {
+      & .link {
         background-color: white;
         color:gray;
         font-size: 13px;
