顧客情報新規登録ビュー作成

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -9,7 +9,7 @@
           justify-content: center;
 }
 
-.new_admin, .new_user, .edit_admin, .edit_user {
+.new_admin, .new_user, .edit_admin, .edit_user, .new_client {
   width: 40%;
 }
 
