--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -7,7 +7,7 @@ $cOrange: orange;
   justify-content: center;
 }
 
-.new_admin,.new_user,.edit_admin,.edit_user {
+.new_admin,.new_user,.edit_admin,.edit_user,.new_client {
   width: 40%;
 }
 
