--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,22 +1,17 @@
-<% "#{@client.name}詳細ページ" %><br>
-会社名：<%= @client.name %><br>
-電話番号：<%= @client.tel %><br>
-郵便番号：<%= @client.postal_code %><br>
-住所：<%= @client.address %><br>
-<%= "担当者：#{@client.charge}" unless @client.charge == "" %><br>
-<%= "担当者電話番号：#{@client.charge_tel}" unless @client.charge_tel == "" %><br>
+<%= render "shared/header" %>
+<%= render "shared/client_info" %>
+<%= render "shared/client_show" %>
 
-<%= link_to "客先情報編集", edit_client_path(@client.id) %>
-<% if user_signed_in? %>
-  <%= link_to "訪問情報追加", new_client_visit_path(@client.id) %>
-  <%= link_to "問合せ情報追加", new_client_call_path(@client.id) %>
-<% end %>
-<h2>訪問履歴</h2>
-<% @visits.each do |visit| %>
-  <br><%= link_to visit.title, client_visit_path(visit.client_id,visit.id) %>
-<% end %>
-<h2>問合せ履歴</h2>
-<% @calls.each do |call| %>
-  <br><%= link_to call.title, client_call_path(call.client_id,call.id) %>
-<% end %>
-<br><%=link_to 'もどる', root_path %>
+  <% if user_signed_in? %>
+    <%= link_to "訪問情報追加", new_client_visit_path(@client.id) %>
+    <%= link_to "問合せ情報追加", new_client_call_path(@client.id) %>
+  <% end %>
+  <h2>訪問履歴</h2>
+  <% @visits.each do |visit| %>
+    <br><%= link_to visit.title, client_visit_path(visit.client_id,visit.id) %>
+  <% end %>
+  <h2>問合せ履歴</h2>
+  <% @calls.each do |call| %>
+    <br><%= link_to call.title, client_call_path(call.client_id,call.id) %>
+  <% end %>
+  <br><%=link_to 'もどる', root_path %>
