--- a/app/views/shared/_client_show.html.erb
+++ b/app/views/shared/_client_show.html.erb
@@ -1,20 +1,13 @@
 <% if user_signed_in? %>
-  <div class="client_show">
-    <div class="visit">
-      <div class="visit_text">訪問履歴</div>
-      <%= link_to "訪問情報新規登録", new_client_visit_path(@client.id), class: "visit_new_link"%>
-      <div class="visit_box">
-        <% @visits.each do |visit| %>
-          <div class="record">
-            <div class="list">
-              <div class="title"><%= visit.title %></div>
-              <%= link_to "詳細", client_visit_path(visit.client_id,visit.id),class: "visit_link" %>
-            </div>
-            <div class="created"><%= visit.updated_at.strftime("%y/%m/%d %H:%M") %></div>
-            <div class="status"><%= Status.find(visit.status_id).name %></div>
-          </div>
-        <% end %>
+
+  <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><%= render "shared/visit_list" %></div>
+        <div class="swiper-slide"><%= render "shared/call_list" %></div>
       </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
-  </div>
+
 <% end %>
