顧客情報編集ビュー作成

--- a/app/assets/stylesheets/client/top.css
+++ b/app/assets/stylesheets/client/top.css
@@ -45,4 +45,19 @@
   -webkit-transform: translate(1px, 1px);
           transform: translate(1px, 1px);
 }
+
+.client_top .info .info_box .back_btn {
+  background-color: white;
+  color: orange;
+  text-align: center;
+  font-size: 13px;
+  font-weight: 600;
+  height: 30px;
+  padding: 3px 15px;
+  margin: 10px 0 0 20px;
+  border: 2px solid orange;
+  border-radius: 16px;
+  cursor: pointer;
+  text-decoration: none;
+}
 /*# sourceMappingURL=top.css.map */
