--- a/app/assets/stylesheets/client/top.scss
+++ b/app/assets/stylesheets/client/top.scss
@@ -1,3 +1,5 @@
+$cOrange: orange;
+
 .client_top {
   width: 100vw;
   height: 30vh;
@@ -17,6 +19,7 @@
       width: 30%;
       height: 140px;
       font-size: 18px;
+      
       & .link {
         background-color: white;
         color:gray;
@@ -30,6 +33,20 @@
           box-shadow: none;
           transform: translate(1px,1px);
         }
+      }
+      & .back_btn {
+        background-color: white;
+        color: $cOrange;
+        text-align: center;
+        font-size: 13px;
+        font-weight: 600;
+        height: 30px;
+        padding: 3px 15px;
+        margin: 10px 0 0 20px;
+        border: 2px solid $cOrange;
+        border-radius: 16px;
+        cursor: pointer;
+        text-decoration: none;
       }
     }
   }
