--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/header" %>
 
 <div class="form_content">
-  <%= form_with model: @client, url: clients_path, class: "new_client", local: true do |f| %>
+  <%= form_with model: @client, url: clients_path, class: "form_with", local: true do |f| %>
 
     <div class="form_header">
       <div class="content_text">顧客情報新規登録</div>
