--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,5 +1,6 @@
 $cBlue: #0099CC;
 $cOrange: orange;
+
 .form_content {
   width: 100%;
   height: 100%;
@@ -7,7 +8,7 @@ $cOrange: orange;
   justify-content: center;
 }
 
-.new_admin,.new_user,.edit_admin,.edit_user,.new_client {
+.new_admin,.new_user,.edit_admin,.edit_user,.form_with {
   width: 40%;
 }
 
