--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,20 +1,62 @@
-<%= form_with model: @client, url: client_path, local: true do |f| %>
-<br>
-<%= f.text_field :name, placeholder:"客先名" %>
-<br>
-<%= f.text_field :tel, placeholder:"電話番号" %>
-<br>
-<%= f.text_field :postal_code, placeholder:"郵便番号" %>
-<br>
-<%= f.text_field :address, placeholder:"住所" %>
-<br>
-<%= f.text_field :charge, placeholder:"担当者" %>
-<br>
-<%= f.text_field :charge_tel, placeholder:"担当者電話番号" %>
-<br>
-<%= f.submit "客先情報変更" %><%=link_to 'もどる', :back %>
-<% end %>
+<%= render "shared/header" %>
 
-<% unless user_signed_in? %>
-  <%= button_to "削除", client_path(@client.id), data: { confirm: "本当に削除しますか?" }, method: :delete %>
-<% end %>
+<div class="form_content">
+
+  <%= form_with model: @client, url: client_path, class: "form_with", local: true do |f| %>
+
+    <div class="form_header">
+      <div class="content_text">顧客情報編集</div>
+    </div>
+
+    <%= render 'shared/error_messages', model: f.object %> 
+
+    <div class="form">
+      <div class="label">
+        <%= f.label :name %>
+      </div>
+      <%= f.text_field :name, placeholder:"顧客名", class: "field" %>
+    </div>
+
+    <div class="form">
+      <div class="label">
+        <%= f.label :tel %>
+      </div>
+      <%= f.text_field :tel, placeholder:"電話番号", class: "field" %>
+    </div>
+
+    <div class="form">
+      <div class="label">
+        <%= f.label :postal_code %>
+      </div>
+      <%= f.text_field :postal_code, placeholder:"郵便番号", class: "field" %>
+    </div>
+
+    <div class="form">
+      <div class="label">
+        <%= f.label :address %>
+      </div>
+      <%= f.text_field :address, placeholder:"住所", class: "field" %>
+    </div>
+
+    <div class="form">
+      <div class="label">
+        <%= f.label :charge %>
+      </div>
+      <%= f.text_field :charge, placeholder:"担当者", class: "field" %>
+    </div>
+
+
+    <div class="form">
+      <div class="label">
+        <%= f.label :charge_tel %>
+      </div>
+      <%= f.text_field :charge_tel, placeholder:"担当者電話番号", class: "field" %>
+    </div>
+
+    <div class="button_box">
+      <%= f.submit "保存", class: "submit" %>
+      <%= link_to "キャンセル", :back, class: "cancel" %>
+      <%= link_to "削除", client_path(@client.id), data: { confirm: "本当に削除しますか？" }, class: "delete", method: :delete %>
+    </div>
+  <% end %>
+</div>
