--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -84,6 +84,25 @@
   margin: 0 auto;
 }
 
+.form .field.content {
+  height: 150px;
+}
+
+.form .date {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.form .date .field {
+  width: 15%;
+  height: 25px;
+  margin: 0;
+}
+
 .button_box {
   display: -webkit-box;
   display: -ms-flexbox;
