--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -48,6 +48,7 @@ $cOrange: orange;
   display: flex;
   flex-direction: column;
   justify-content: center;
+
   & .label {
     margin-top: 20px;
     & .indispensable {
@@ -61,6 +62,20 @@ $cOrange: orange;
     width: 100%;
     height: 25px;
     margin: 0 auto;
+
+    &.content {
+      height: 150px;
+    }
+  }
+
+  & .date {
+    display: flex;
+    justify-content: flex-start;
+    & .field {
+      width: 15%;
+      height: 25px;
+      margin: 0;
+    }
   }
 }
 
