--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -1,20 +1,3 @@
-<h1>訪問情報詳細ページ</h1>
-タイトル：<%= @visit.title %><br>
-訪問日：<%= @visit.date.strftime("%y年%-m月%-d日%-H:%M") %><br>
-訪問内容：<%= @visit.content %><br>
-状況：<%= Status.find(@visit.status_id).name %><br>
-
-<%= link_to "訪問情報編集", edit_client_visit_path %>
-<% if user_signed_in? %>
-  <%= form_with(model: @visit_comment,url: "/clients/#{@visit.client_id}/visits/#{@visit.id}/visit_comments", local: true) do |form| %>
-    <%= form.text_area :comment, placeholder: "コメントする", rows: "2" %>
-    <%= form.submit "SEND" %>
-  <% end %>
-<% end %>
-<h2>＜コメント一覧＞</h2>
-<% @visit_comments.each do |comment| %>
-  <strong><%= "#{comment.user.name}" %>：</strong>
-  <%= comment.comment %>
-<% end %>
-
-<br><%=link_to 'もどる', client_path(params[:client_id]) %>
+<%= render "shared/header" %>
+<%= render "shared/visit_info" %>
+<%= render "shared/visit_comment" %>
