--- a/app/assets/stylesheets/client/show.css
+++ b/app/assets/stylesheets/client/show.css
@@ -9,10 +9,12 @@
 }
 
 .client_show .show_box {
+  height: 100%;
   width: 80%;
 }
 
 .client_show .show_box .top_text {
+  height: 35px;
   font-size: 30px;
   font-weight: 600;
   color: #0099CC;
@@ -28,12 +30,13 @@
   font-weight: 600;
   width: 40%;
   height: 30px;
-  margin: 5px auto 30px;
+  margin: 10px auto 20px;
   border: 4px solid #0099CC;
   border-radius: 20px;
 }
 
 .client_show .show_box .list_box {
+  height: calc(100% - 162px);
   overflow: scroll;
 }
 
@@ -99,5 +102,20 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.client_show .show_box .back_btn {
+  display: block;
+  background-color: white;
+  color: orange;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  width: 40%;
+  height: 30px;
+  margin: 10px auto 0;
+  border: 5px solid orange;
+  border-radius: 20px;
+  cursor: pointer;
 }
 /*# sourceMappingURL=show.css.map */
