--- a/app/assets/stylesheets/client/show.scss
+++ b/app/assets/stylesheets/client/show.scss
@@ -1,4 +1,5 @@
 $cBlue: #0099CC;
+$cOrange: orange;
 
 .client_show {
   height: calc(70vh - 50px);
@@ -6,14 +7,15 @@ $cBlue: #0099CC;
   justify-content: center;
 
   & .show_box {
+    height: 100%;
     width: 80%;
 
     & .top_text {
+      height: 35px;
       font-size: 30px;
       font-weight: 600;
       color: $cBlue;
       text-align: center;
-
     }
 
     & .new_link {
@@ -25,12 +27,13 @@ $cBlue: #0099CC;
       font-weight: 600;
       width: 40%;
       height: 30px;
-      margin: 5px auto 30px;
+      margin: 10px auto 20px;
       border: 4px solid $cBlue;
       border-radius: 20px;
     }
 
     & .list_box {
+      height: calc(100% - 162px);
       overflow: scroll;
 
       & .record {
@@ -77,5 +80,22 @@ $cBlue: #0099CC;
         }
       }
     }
+
+    & .back_btn {
+      display: block;
+      background-color: white;
+      color: $cOrange;
+      text-align: center;
+      font-size: 20px;
+      font-weight: 700;
+      width: 40%;
+      height: 30px;
+      margin: 10px auto 0;
+      border: 5px solid $cOrange;
+      border-radius: 20px;
+      cursor: pointer;
+    }
   }
 } 
+
+  
