--- a/app/views/shared/_visit_comment.html.erb
+++ b/app/views/shared/_visit_comment.html.erb
@@ -1,14 +1,22 @@
-  
-  
-  <%= form_with(model: @visit_comment,url: "/clients/#{@visit.client_id}/visits/#{@visit.id}/visit_comments", local: true) do |form| %>
-    <%= form.text_area :comment, placeholder: "コメントする", rows: "2" %>
-    <%= form.submit "SEND" %>
+<div class="comment_content">  
+  <div class="comment_box">
+    ＜コメント一覧＞
+    <div class="area">
+      <% @visit_comments.each do |comment| %>
+        <div class="comment">
+          <%= "#{comment.user.name}：#{comment.comment}" %>
+        </div>
+      <% end %>
+    </div>
 
-    <h2>＜コメント一覧＞</h2>
-  <% @visit_comments.each do |comment| %>
-    <strong><%= "#{comment.user.name}" %>：</strong>
-    <%= comment.comment %>
-  <% end %>
+    <div class="comment_form">
+      <%= form_with model: @visit_comment,url: "/clients/#{@visit.client_id}/visits/#{@visit.id}/visit_comments", class: "form_box", local: true do |form| %>
+        <%= form.text_area :comment, placeholder: "コメントする", class: "textform", rows: "2" %>
+        <%= form.submit "送信",class: "comment_btn" %>
+      <% end %>
+    </div>
 
-  <%= link_to 'もどる', client_path(params[:client_id]) %>
-  <% end %>
+    <%= link_to 'もどる', client_path(params[:client_id]), class: "back_btn" %>
+    
+  </div>
+</div>
