各テーブルの更新日時情報の反映

--- a/app/assets/stylesheets/client/show.css
+++ b/app/assets/stylesheets/client/show.css
@@ -60,6 +60,7 @@
   display: block;
   text-decoration: none;
   background-color: #0099CC;
+  font-weight: 600;
   color: white;
   padding: 1px 20px;
   margin-right: 5px;
