--- a/app/assets/stylesheets/client/show.scss
+++ b/app/assets/stylesheets/client/show.scss
@@ -46,6 +46,7 @@ $cOrange: orange;
             display: block;
             text-decoration: none;
             background-color: $cBlue;
+            font-weight: 600;
             color: white;
             padding: 1px 20px;
             margin-right: 5px;
