--- a/app/views/calls/edit.html.erb
+++ b/app/views/calls/edit.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/header" %>
 
 <div class="form_content">
-  <%= form_with model: @call, url: client_calls_path, class: "form_with", local: true do |f| %>
+  <%= form_with model: [@call.client,@call],  class: "form_with", local: true do |f| %>
 
     <div class="form_header">
       <div class="content_text">見積り情報編集</div>
