--- a/app/assets/stylesheets/admin/top.css
+++ b/app/assets/stylesheets/admin/top.css
@@ -2,6 +2,7 @@
   width: 100vw;
   height: 30vh;
   min-height: 180px;
+  min-width: 700px;
   border-bottom: 2px dotted black;
 }
 
@@ -76,6 +77,7 @@
 
 .user_list {
   height: calc(70vh - 50px);
+  min-width: 700px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -96,7 +98,7 @@
   font-size: 20px;
   font-weight: 600;
   width: 30%;
-  height: 30px;
+  height: 40px;
   margin: 30px auto 30px;
   border: 4px solid #0099CC;
   border-radius: 20px;
@@ -110,7 +112,8 @@
 
 .user_list .list_box {
   width: 40%;
-  height: 280px;
+  height: 70%;
+  min-height: 175px;
   overflow: scroll;
 }
 
