--- a/app/assets/stylesheets/admin/top.scss
+++ b/app/assets/stylesheets/admin/top.scss
@@ -4,6 +4,7 @@ $cBlue: #0099CC;
   width: 100vw;
   height: 30vh;
   min-height: 180px;
+  min-width: 700px;
   border-bottom: 2px dotted black;
   & .name {
     font-size: 20px;
@@ -56,6 +57,7 @@ $cBlue: #0099CC;
 
 .user_list {
   height: calc(70vh - 50px);
+  min-width: 700px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -67,7 +69,7 @@ $cBlue: #0099CC;
     font-size: 20px;
     font-weight: 600;
     width: 30%;
-    height: 30px;
+    height: 40px;
     margin: 30px auto 30px;
     border: 4px solid $cBlue;
     border-radius: 20px;
@@ -79,7 +81,8 @@ $cBlue: #0099CC;
   }
   & .list_box {
     width: 40%;
-    height: 280px;
+    height: 70%;
+    min-height: 175px;
     overflow: scroll;
     & .list {
       height: 35px;
