--- a/app/assets/stylesheets/user/top.css
+++ b/app/assets/stylesheets/user/top.css
@@ -1,5 +1,7 @@
 .client_list {
   height: calc(70vh - 50px);
+  min-height: 400px;
+  min-width: 700px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -20,7 +22,7 @@
   font-size: 20px;
   font-weight: 600;
   width: 30%;
-  height: 30px;
+  height: 40px;
   margin: 30px auto 30px;
   border: 4px solid #0099CC;
   border-radius: 20px;
@@ -46,7 +48,8 @@
 
 .client_list .client_list_box {
   width: 60%;
-  height: 280px;
+  height: 70%;
+  min-height: 175px;
   overflow: scroll;
 }
 
@@ -64,7 +67,6 @@
       -ms-flex-align: end;
           align-items: flex-end;
   font-size: 20px;
-  font-weight: 600;
   border-right: 1px dotted gray;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -77,6 +79,7 @@
 .client_list .client_list_box .record .list .client_link {
   display: block;
   text-decoration: none;
+  font-weight: 600;
   background-color: #0099CC;
   color: white;
   margin-right: 5px;
