--- a/app/assets/stylesheets/user/top.scss
+++ b/app/assets/stylesheets/user/top.scss
@@ -2,6 +2,8 @@ $cBlue: #0099CC;
 
 .client_list {
   height: calc(70vh - 50px);
+  min-height: 400px;
+  min-width: 700px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -13,7 +15,7 @@ $cBlue: #0099CC;
     font-size: 20px;
     font-weight: 600;
     width: 30%;
-    height: 30px;
+    height: 40px;
     margin: 30px auto 30px;
     border: 4px solid $cBlue;
     border-radius: 20px;
@@ -34,7 +36,8 @@ $cBlue: #0099CC;
 
   .client_list_box{
     width: 60%;
-    height: 280px;
+    height: 70%;
+    min-height: 175px;
     overflow: scroll;
     & .record {
       height: 35px;
@@ -45,7 +48,6 @@ $cBlue: #0099CC;
         width: 70%;
         align-items: flex-end;
         font-size: 20px;
-        font-weight: 600;
         border-right: 1px dotted gray;
         display: flex;
         justify-content: space-between;
@@ -53,6 +55,7 @@ $cBlue: #0099CC;
         & .client_link {
           display: block;
           text-decoration: none;
+          font-weight: 600;
           background-color: $cBlue;
           color: white;
           margin-right: 5px;
