--- a/app/views/shared/_user_top.html.erb
+++ b/app/views/shared/_user_top.html.erb
@@ -13,7 +13,7 @@
             <%= link_to "履歴確認", client_path(client.id), class: "client_link" %>
           </div>
           <div class="update">
-            2021/5/6
+              <%= client.updated_at.strftime("%y/%m/%d %H:%M") %>
           </div>
         </div>
       <% end %>
