--- a/app/views/shared/_visit_list.html.erb
+++ b/app/views/shared/_visit_list.html.erb
@@ -8,7 +8,9 @@
             <div class="title"><%= visit.title %></div>
             <%= link_to "詳細", client_visit_path(visit.client_id,visit.id),class: "link" %>
           </div>
-          <div class="created"><%= visit.updated_at.strftime("%y/%m/%d %H:%M") %></div>
+          <div class="created">
+            <%= visit.updated_at.strftime("%y/%m/%d %H:%M") %>
+          </div>
           <div class="status"><%= Status.find(visit.status_id).name %></div>
         </div>
       <% end %>
